# programming-basics-labs

./: .gitignore  CMakeLists.txt  lab_11.c  lab_12.c  lab_2.c  lab_3.c  lab_4.c  lab_5.c  lab_6.c  lab_7.c  lab_8.c  lab_9.c  main.c
lab_10/: eight.c  eighteen.c  eleven.c  fifteen.c  five.c  four.c  fourteen.c  nine.c  nineteen.c  one.c  seven.c  seventeen.c  six.c  sixteen.c  ten.c  thirteen.c  three.c  twelve.c  twenty.c  two.c  util.c  util.h
