cmake_minimum_required(VERSION 3.26)
project(lab_19_1 C)

set(CMAKE_C_STANDARD 11)

add_executable(
        lab_19_1
        main.c
        lab_2.c
        lab_3.c
        lab_4.c
        lab_5.c
        lab_6.c
        lab_7.c
        lab_8.c
        lab_9.c
        main.c
        lab_10/one.c
        lab_10/util.h
        lab_10/util.c
        lab_10/two.c
        lab_10/three.c
        lab_10/four.c
        lab_10/five.c
        lab_10/seven.c
        lab_10/eight.c
        lab_10/nine.c
        lab_10/ten.c
        lab_10/eleven.c
        lab_10/twelve.c
        lab_10/thirteen.c
        lab_10/fourteen.c
        lab_10/fifteen.c
        lab_10/seventeen.c
        lab_10/eighteen.c
        lab_10/twenty.c
        lab_11.c
        lab_10/nineteen.c
        lab_10/six.c
        lab_10/sixteen.c
        lab_12.c
)
